$Id: NEWS,v 1.129 2001-09-26 15:00:33 flood Exp $

1.2.3 - CVS
---------------------------------
PASS argument now intentionally hidden in the proctitle.
- Bug 1331 - Reverse DNS is now forward checked for security
- Bug 1305 - limits.h is now included if present

1.2.2 - Released 08/17/2001
---------------------------------
README.mod_sql update from author
new mod_sql from author
- Bug 1285 - Documentation updates
- Bug 1278 - pedantic fix to access_check()
- Bug 1266 - Use of APPEnd could corrupt files
- Bug 1286 - mod_ls displays set[ug]id bits
- Bug 1145 - DirFakeUser now applies to STAT
- Bug 1216 - xferlog man page update
- Bug 1111 - INSTALL update
- Bug 1262 - Doc update
- Bug 1217 - Doc update
- Bug 1187 - Upstream update to mod_quota
- Bug 1232 - UserOwner no longer performs chgrp
- Bug 1219 - compilation fix under gcc 3.0
- Bug 1230 - Portability fix for Sol 8 (sparcv9)
- Bug 1169 - Fix bug introduced by 1098, breaking DefaultRoot other
  than "~*"
- Bug 1234 - ABOR now always returns 226 (as per RFC959)
- New mod_sql from upstream maintainer

1.2.2rc3 - Released 06/19/2001
---------------------------------
- Bugs 1164,1020,1134,1190,1207
  Documentation updates
- Bug 1215 - Removed setpgid()/setpgrp() from fork_server()
- Bug 1145 - DirFakeUser can display current logged in user
- Bug 1210 - Possible silent truncation in net-ascii mode
- Bug 1212 - special files (devices, etc) didn't show up in directory
  listings.
- Bug 1189 - (again) <Directory> dups allowed in <Anonymous>
- Bug 1155 - non rfc behavior on filenames with spaces
- Bug 1193 - Error "~" processing while renaming files
- Bug 1203 - negation ('!') notation in Allow/Deny ACL broken
- Bug 1161 - %F magic cookie now displays free space on cwd
- Bug 1151 - Allow <Limit> searching in vhost or main server conf
- Copyright/License updated to allow linking to OpenSSL
- Bug 1183 - Removed duplicate find_class() call
- Bug 1189 - <Directory> duping checked for